--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,93 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  min-height: 2000px;
+}
+
+header#blueBg {
+  background-color: #06365f;
+  min-width: 100%;
+  min-height: 25em;
+
+}
+
+article {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 5em;
+  margin: 0 25%;
+
+}
+
+
+span#logo {
+  position:relative;
+  display: inline-block;
+  background: url("../images/brand.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 39px 100px;
+
+}
+
+span#button {
+  background-color: #1c5380;
+  position: relative;
+  display: inline-block;
+  border-radius: 10px;
+  color: #fff;
+  padding: 15px 10px
+}
+
+aside {
+  width: 320px;
+  height: 514px;
+  position: relative;
+  display: inline-block;
+  background: url("../images/phones.png");
+  background-size: cover;
+
+}
+
+.shadowTainer {
+  width: 40%;
+  height: 500px;
+  border-radius: 10px;
+  margin: 80px 20%;
+  position: relative;
+  display: inline-block;
+  padding: 40px;
+/*   background-color: white; */
+  background: url("../images/frame.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+
+}
+
+.shadowTainer p {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+
+}
+
+.shadowTainer h2 {
+  width: 100%;
+  background-color: white;
+
+}
+
+footer {
+  text-align: center;
+  position: fixed;
+   margin: 0;
+  bottom: 0px;
+  padding: 15px 20% 5px 20%;
+}
+
+footer > a {
+  padding: 8px;
 }
