--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,77 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html{
+   background-image:-webkit-gradient(linear, right top, right bottom, color-stop(0%,#214cd9), color-stop(35%,#33667d),color-stop(35%,#ffffff));
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.instLogo{
+  float:left;
+  height:65px;
+  margin-left: 575px;
+  margin-top: -100px;
+}
+
+.textBox{
+  position:relative;
+  margin-left: 570px;
+  margin-top: 200px;
+  background-image: url("../images/frame.png") ;
+  background-repeat: no-repeat;
+}
+
+.pInTxtBox{
+  padding-bottom: 20px;
+  margin-left: 50px;
+  max-width: 350px;
+}
+
+.storePic{
+  margin-left: 200px;
+  margin-top: 100px;
+}
+.phonePic{
+  margin-left: 200px;
+  margin-top: -1000px;
+}
+.mainTitle{
+/*  margin-top: 50px;   */
+  padding-top: 15px;
+  color: #33667d;
+  margin-left: 50px;
+  margin-top: 100px;
+  width: 250px;
+  height: 75px;
+}
+
+
+.button{
+  margin-left: 20px;
+}
+.buttonmargin{
+  margin-left: 400px;
+  margin-top: -65px;
+}
+.footNote{
+  padding-top: 100px;
+  color: #33667d;
+  text-align: center;
+  word-spacing: 5px;
+}
+.cRight{
+  margin-left: 830px;
+  margin-bottom: 35px;
+  text-align: left;
+  color:gray;
+
+}
+.theFrame{
+  float:left;
+  height:65px;
+  margin-left: 575px;
 }
