--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,120 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+h1, body, html, main {
+  /*margin: 30px;*/
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+}
+.first-box{
+height: 250px;
+width: 1300px;
+box-sizing: border-box;
+background-color: #1c5380;
+
+}
+.brand-instagram{
+  position: relative;
+  margin-left: 80px;
+  margin-top: 70px;
+  height: 60px;
+  float:left;
+}
+.button {
+    /*background-color: #1c5380;*/
+    border-width: 2px;
+    float:left;
+    border-color: lightblue;
+    border-style: outset;
+    border-radius: 4px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    text-align: center;
+    text-decoration: none;
+    height: 20px;
+    width: 75px;
+    position: relative;
+    margin-left: 477px;
+    margin-top: -55px;
+
+}
+.log-in{
+font-size: 13px;
+color: white;
+font-weight: bold;
+padding-bottom: 10px;
+}
+.image-home{
+width: 22 px;
+height: 22px;
+position: relative;
+margin-top: 5px;
+}
+
+.phones{
+  position: relative;
+  margin-left: 200px;
+  margin-top: 60px;
+  height: 480px;
+  float:left;
+}
+
+.image-frame{
+  width: 300px;
+  float: right;
+  margin-right: 400px;
+  margin-top: -100px;
+}
+
+.text-over-image{
+  position: absolute;
+  left:630px;
+  top: 175px;
+  font-size: 14px;
+}
+h2{
+  color:  #1c5380;
+}
+
+.badge{
+  position: absolute;
+  left:585px;
+  top: 480px;
+}
+ .badge-iphone{
+    height: 40px;
+ }
+ .badge-android{
+    height: 40px;
+    margin-left: 10px;
+ }
+
+.menu-bottom{
+height: 70px;
+margin-top: 20px;
+margin-left: 100px;
+position: absolute;
+color: lightblue;
+font-weight: bold;
+font-size: 11px;
+text-align:justify;
+
+}
+ul#navigation{
+  list-style: none;
+    margin-left: -350px;
+    margin-top: 20px;
+}
+ul#navigation li {
+    display: inline;
+    list-style: none;
+    padding-right: 8px;
+    /*margin: -50;
+    padding: 0;*/
+}
+.copy{
+  color: gray;
 }
