--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,94 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top-background{
+    background: linear-gradient(#6491c4, #1c5380);
+    height: 300px;
+}
+
+#instagram-brand{
+    position: relative;
+    bottom:170px;
+    left: 700px;
+}
+
+#login-button{
+    width:100px;
+    height: 50px;
+    color: white;
+    font-size: 22px;
+    font: "Helvetica Neue";
+    background: linear-gradient(#6491c4, #1c5380);
+    border:1px solid #06365f;
+    box-shadow: 0 3px 3px #1c5380;
+    position:relative;
+    bottom: 250px;
+    left: 1150px;
+}
+
+#login-button h6{
+    position:relative;
+    bottom: 20px;
+    float: right;
+    padding-right: 10px;
+}
+
+#login-button img{
+    position: relative;
+    top: 12px;
+    padding-left: 8px;
+}
+
+.phone img{
+    position:relative;
+    bottom: 350px;
+    left: 200px;
+}
+
+.main-text{
+    position: relative;
+    bottom: 750px;
+    left: 700px;
+}
+
+#frame {
+    width: 580px;
+}
+
+.main-text h1{
+    width: 400px;
+    color: #06365f;
+    font-size: 28px;
+    padding-left: 60px;
+    position: relative;
+    bottom: 300px;
+}
+
+.main-text p{
+    width: 480px;
+    padding:50px;
+    position: relative;
+    bottom: 300px;
+}
+
+#badge-android{
+    position: relative;
+    bottom: 300px;
+    left: 50px;
+}
+#badge-iphone{
+    position: relative;
+    bottom: 300px;
+    left: 70px;
+}
+
+.footer{
+    position: relative;
+    bottom: 900px;
+    left: 500px;
+}
+
+#bottom-nav{
+    color: #1c5380;
+}
