--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,71 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+#fondo_superior{
+  height: 300px;
+  background-color: #1c5380;
+
+}
+
+#fondo_inferior{
+  height: 600px;
+  background-color: white;
+}
+
+#movil{
+  position: absolute;
+  float: left;
+  padding: 5px;
+  margin-left: 180px;
+  margin-top: 75px;
+
+}
+
+#instagram{
+  position: absolute;
+  float: left;
+  margin-left: 600px;
+  margin-top: 75px;
+}
+
+.texto{
+  position: absolute;
+  float: left;
+  margin-left: 550px;
+  margin-top: 190px;
+  background-image:url("../images/frame.png");
+  background-size: cover;
+  padding: 50px;
+  margin-right: 365px;
+}
+
+h3{
+  color: #06365f;
+  font-size: 25px;
+}
+
+li{
+
+  display: inline-block;
+  padding: 2px;
+  font-size: 22px;
+}
+
+#list{
+  position: absolute;
+  float: left;
+  margin-left:180px;
+  margin-top: -140px;
+  color: #06365f;
+}
+
+#login{
+  position: absolute;
+  float: left;
+  margin-left:980px;
+  margin-top: 95px;
+  background-color: #06365f;
+  padding: 6px;
+
+
+}
