--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,89 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.blue-box {
+  background-image: url(../images/bgtile.png);
+  width: 100%;
+  height: 200px;
+}
+
+.phones-container {
+  float: left;
+  position: relative;
+  bottom: 120px;
+  margin-left: 50px;
+  width: 20%;
+}
+
+.phones-photo {
+  max-width: 60vw;
+  max-height: 60vw;
+}
+
+.right-box {
+  float: left;
+  position: relative;
+  bottom: 120px;
+  left: 180px;
+  margin-right: 40px;
+  width: 45%;
+}
+
+.heading {
+  color: #1c5380;
+}
+
+.frame {
+  clear: both;
+  background-image: url(../images/frame.png);
+  padding: 20px;
+  background-repeat: no-repeat;
+}
+
+.badge {
+  float:left;
+  width: 40%;
+  margin: 10px;
+}
+
+.brand {
+  float: left;
+  width: 70%;
+}
+
+.log-in {
+  float:left;
+  background-color: #1c5380;
+  color: #fff;
+  text-align: right;
+  width: 80px;
+  border: none;
+  margin-left: 10px;
+  position: relative;
+  top: 20px;
+  font-weight: 600;
+}
+
+.home-img {
+  height: 18px;
+  width: 18px;
+  padding-right: 15px;
+  padding-top: 5px;
+}
+
+.copyright {
+  color: #000;
+  font-weight: 200;
+}
+
+footer {
+  float: left;
+  color: #1c5380;
+  font-weight: 400;
+  margin-top: 100px;
+  margin-left: -300px;
 }
