--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,82 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header {
+  background-color: #1c5380;
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.center-box{
+  position: absolute;
+  top: 14.9%;
+  left: 14.9%;
+  width: 65%
+}
+
+#phones{
+  float: left;
+  width: 37%;
+}
+#caja{
+  width:62%;
+  float:left;
+}
+#logo{
+  float: left;
+  padding-right: 60px;
+  height: 90px;
+}
+
+#login{
+  box-sizing: border-box;
+  float: left;
+  border: 1px solid #06365f;
+  color: #FFFFFF;
+  height: 50px;
+  width: 120px;
+  margin-top: 10px;
+  padding: 7px;
+}
+#texto{
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  padding: 10px 40px 0 30px;
+  clear:both;
+  width: 100%;
+}
+#titulo{
+  color: #06365f;
+  font-size: 30px;
+}
+#apps{
+  margin-top: 40px;
+}
+#android{
+  margin-left: 20px;
+}
+
+.footer {
+  clear: both;
+  padding-top: 60px;
+  text-align: center;
+  padding-left: 18%;
+}
+.link{
+  float: left;
+  color: #1c5380;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-right: 15px;
+}
+#copy{
+  float: left;
+  color: #b1b4b7;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
