--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,33 +12,41 @@ body {
 #fondo-azul {
   background-color: #06365f;
   height: 300px;
+  width: 100%;
 }
 
-#fondo-blanco {
-  background-color: white;
-  height: 700px;
-
+#caja-telefono {
+  width: 35%;
 }
-
-#telefono {
+#caja-telefono, #caja-parrafo {
   float: left;
-  position: absolute;
-  margin-top:130px;
-  margin-left: 90px;
 }
+
+
 
 #logo {
-  float: right;
-  position: absolute;
-  margin-top: -840px;
-  margin-left: 460px;
-
-
-}
-#home {
-  float: right;
+  height: 90px;
 }
 
 #parrafo{
   float: left;
+}
+
+#caja{
+  width: 72%;
+  margin: 0 auto;
+  position: relative;
+  top: -168px;
+}
+#caja-parrafo{
+  width: 60%;
+  margin-left: 30px;
+}
+footer {
+  width: 100%;
+}
+
+.main {
+  width: 100%;
+  height: 530px;
 }
