--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,124 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.toplayer {
+  background: linear-gradient(#577696, #547494);
+  height: 300px;
+  position: relative;
+}
+
+.maincontainer {
+  position: relative;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0);
+  margin: auto;
+  height: 600px;
+  width: 900px;
+  margin: -200px auto;
+}
+
+.phonecontainer {
+  position: relative;
+  float: left;
+}
+
+.rightsidecontainer {
+  width: 450px;
+  float: left;
+}
+
+.logocontainer {
+  position: relative;
+  float: left;
+  margin-left: 30px;
+  width: 100px;
+}
+
+.button {
+  position: relative;
+  border: 1px solid darkblue;
+  border-radius: 3px;
+  border-color: #486889;
+  float: right;
+  margin-right: -70px;
+  margin-top: 20px;
+  height: 33px;
+  width: 100px;
+  padding-top: 5px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 33px;
+  color: white;
+  background-color: #7290AC;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+.homeicon {
+  vertical-align: middle;
+  margin-top: 5px;
+  margin-left: 10px;
+  line-height: 32px;
+  float: left;
+  image-resolution: snap;
+}
+
+.logintext {
+  height: 32px;
+  margin-left: 11px;
+  line-height: 32px;
+  float: left;
+}
+
+.textcontainer {
+  background-image: url("../images/frame.png");
+  margin-left: 30px;
+  height: 264px;
+  width: 424px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+  clear: both;
+}
+
+h1 {
+  font-size: 24px;
+  color: #1c5380;
+}
+
+h3 {
+  font-size: 12px;
+  color: #1c5380;
+  float: left;
+}
+
+h4 {
+  font-size: 10px;
+  color: gray;
+  float: left;
+}
+
+.buttonholders {
+  float: right;
+  margin-top: 100px;
+  margin-right: 60px;
+}
+
+.footermenu {
+  position: relative;
+  float: left;
+  width: auto;
+  margin-top: 60px;
+  margin-left: 175px;
+}
+
+ul {
+  color: #1c5380;
+}
+
+li {
+  display: inline;
+  list-style: none;
+  padding: 5px;
+}
