--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,75 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 5% 10% 20% 10%;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.phones {
+ float: left;
+ padding-right: 5%;
+ margin-bottom: 10%;
+
+
+}
+
+
+.whole{
+
+
+  display: flex;
+  flex-direction: column;
+
+  border: 1px solid black;
+
+}
+
+.brand{
+display: flex;
+flex-direction: row;
+}
+
+.home {
+ color: white;
+  background-color: #1c5380;
+  font-size: 20px;
+  border: 2px solid black;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  margin-left: 10%;
+  
+
+
+}
+.frame{
+  z-index: 1;
+  position: relative;
+  border: 1px solid blue;
+
+
+}
+.content{
+ border: 1px solid red;
+
+
+
+}
+
+p {
+  z-index: 1000;
+  border: 1px solid green;
+  width: 70%;
+  margin-top: -30%;
+  padding-bottom: 18%;
+
+}
+
+
+.call{
+
+}
+
+.menu{
+
 }
